--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "48 atalhos de teclado para vs code",
   "main": "src/index.html",
   "scripts": {
+    "start": "npx live-server src/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/AndreRolimDias/VS-CODE-#readme",
   "devDependencies": {
-    "live-server": "^1.2.2"
+    "live-server": "^1.2.2",
+    "prettier": "2.8.1"
   }
 }
